<resources>
    <string name="app_name">فرحك</string>
    <string name="hint_email">الإيميل</string>
    <string name="hint_password">الرقم السري</string>
    <string name="hint_name">الإسم بالكامل</string>
    <string name="btn_login">تسجيل الدخول</string>
    <string name="btn_register">تسجيل</string>
    <string name="btn_link_to_register">ليس لديك حساب! قم بالتسجيل الآن.</string>
    <string name="btn_link_to_login">لديك حساب بالفعل! قم بتسجيل الدخول.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="nav_item_attachment">البحث عن القاعات</string>
    <string name="nav_item_images">clothes</string>
    <string name="nav_item_location">Accessories</string>
    <string name="nav_sub_menu">SubMenu</string>
    <string name="nav_sub_menu_item01">sub item 1</string>
    <string name="nav_sub_menu_item02">sub item 2</string>
    <string name="drawer_header_text">Welcome</string>
    <string name="call_bottombar">اتصال</string>
    <string name="dummy_text1">ذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضها في هذا المكان و حجم و لون الخط هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضها في هذا المكان و حجم و لون الخط هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضها في هذا المكان و حجم و لون الخط هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضها في هذا المكان و حجم و لون الخط هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضها في هذا المكان و حجم و لون الخط هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضها في هذا المكان و حجم و لون الخط هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضها في هذا المكان و حجم و لون الخط هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضها في هذا المكان و حجم و لون الخط هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضها في هذا المكان و حجم و لون الخط هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضها في هذا المكان و حجم و لون الخط هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضها في هذا المكان و حجم و لون الخط هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضها في هذا المكان و حجم و لون الخط هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضها في هذا المكان و حجم و لون الخط هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضها في هذا المكان و حجم و لون الخط هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضها في هذا المكان و حجم و لون الخط</string>


     <string name="cheese_ipsum">أولا : قبل الزفاف بـ3 أشهر ناقشي مع خطيبك و والديكما حجم حفلة الزفاف و الميزانية المرصودة للحفل و قرري إذا كنت ستقيمين:
ڤحفل فخم جدا و ميزانيته
ڤحفل مميز و ميزانيته
ڤحفل مختصر و ميزانيته
ڤحفل عائلي و ميزانيته
     </string>
    <string name="second_cardviewText">ثانيا: بعد تحديد حجم الحفل ابدئي بالبحث عن موقع للحفل و يمكنك سؤال صديقاتك وأفراد العائلة عن المواقع التي يمكن إقامة الحفل بها كما يمكنك الاستفادة من الدليل المرفق مع هذه القائمة أو دليل الهاتف التجاري أو أي أدلة متخصصة في مجال الأفراح.
وقررت أن يكون الحفل في:
ڤصالة / قصر احتفالات و تكلفة إيجار الصالة
ڤصالة فندق و تكلفة إيجار الصالة
ڤاستراحة مخصصة للاحتفالات و تكلفة إيجار الاستراحة
ڤمنزل العائلة و تكلفة إيجار المنزل مجــانا
ڤموقع آخر و تكلفة إيجاره </string>
    <string name="third_cardviewText">ثالثا: ابدئي باختيار قائمة الطعام الخاص بالحفل و تذكري أن تشمل القائمة أطعمة قليلة الدسم لأنه سيكون من ضمن ضيوفك من يهتمون بهذه الأطعمة. بعض صالات الأفراح تتكفل بتموين العشاء الخاص لحفل الزفاف كما يمكنك الاتفاق مع أحد المطاعم المتخصصة لتموين العشاء الخاص بحفل الزفاف. من المعروف أيضا أن الكثير من الطعام يبقى بعد الحفل و ننصحك بالتنسيق مسبقا مع أحد الجمعيات الخيرية للتبرع بما يتبقى من الطعام للمحتاجين.
ڤالعشاء مقدم من الصالة
ڤالعشاء مقدم من مطعم _________ و تكلفته
ڤالعشاء يحتوي على أطعمة قليلة الدسم
ڤتم التنسيق مع جمعية __________ الخيرية للتبرع بالباقي من العشاء</string>

    <string name="fourth_cardviewText">رابعا: ابدئي باختيار أسماء المدعوين للحفل بالتنسيق مع خطيبك و والديكما. بعد أن تجمعي قائمة بأسماء المدعوين ابدئي بالبحث عن مطابع لطباعة بطاقات الدعوة. ينصح بمقارنة أسعار خمس مطابع على الأقل للحصول على أفضل سعر. من المهم أيضا أن تقومي بذلك مبكرا لأن الطباعة قد تستغرق وقتا كبيرا في بعض الأحيان. أطلبي مشاهدة بروفة للطباعة قبل الطباعة النهائية للتأكد من أن جميع المعلومات صحيحة.
ڤبطاقات الدعوة سيتم طباعتها في مطبعة ___________ و تكلفتها
ڤبطاقات الدعوة سيتم إرسالها للمدعوين في تاريخ ___________ بواسطة </string>
    <string name="checkin">Checkin</string>

    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="about_text" >هذا التطبيق تابع لشركة\n
    KYW Line\n</string>
    <string name="share_app_text">قم بتجربة تطبيق فرحة\n
    B</string>
    <string name="share_with">مشاركة التطبيق مع أصدقائك</string>


</resources>
