<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group_nav" android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_attachment"
            android:checked="true"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_item_attachment" />
        <item
            android:id="@+id/navigation_item_images"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_item_images" />
        <item
            android:id="@+id/navigation_item_location"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_item_location" />
        <item
            android:id="@+id/nav_item_logout"
            android:icon="@mipmap/ic_launcher"
            android:title="Logout"/>
    </group>



</menu>