<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".activities.HomeActivity" >
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">



<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/backdrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:fitsSystemWindows="true"
        app:layout_collapseMode="parallax"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="84dp">
    <LinearLayout
        android:id="@+id/countdays_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginLeft="150dp"

        >

   <LinearLayout
       android:id="@+id/day_layout"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
       android:layout_alignParentBottom="true"
       android:orientation="vertical"
       android:layout_weight="1"

       >

       <TextView
           android:id="@+id/tx_days"

           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"

           android:textSize="@dimen/count_tex_size"
           android:textColor="@color/white"
           android:text="-"/>


       <TextView

           android:id="@+id/day"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:text="يوم"
           android:textSize="@dimen/count_tex_size"
           android:textColor="@color/white"/>


   </LinearLayout>

    <LinearLayout
        android:id="@+id/hours_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/day_layout"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tx_hours"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/count_tex_size"

            android:text="-"/>


        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="ساعة"
            android:textColor="@color/white"
            android:textSize="@dimen/count_tex_size"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/minutes_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/hours_layout"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tx_minutes"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:textSize="@dimen/count_tex_size"

            android:text="-"/>


        <TextView
            android:id="@+id/minutes"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="دقيقة"
            android:textSize="@dimen/count_tex_size"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secods_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/minutes_layout"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tx_seconds"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:textSize="@dimen/count_tex_size"

            android:text="-"/>


        <TextView
            android:id="@+id/secods"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="ثانية"
            android:textSize="@dimen/count_tex_size"/>

    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/countdays_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="_______________________________"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tx_date"
        android:textColor="@color/white"
        android:text="- -"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/space"/>






    <Button
        android:id="@+id/btn_set_date"
        android:layout_width="wrap_content"
        android:text="حدد موعد فرحك"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:layout_above="@id/tx_date"
        android:layout_marginBottom="60dp"/>


<LinearLayout
    android:id="@+id/wedding_of_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_centerHorizontal="true"
    android:layout_above="@id/tx_date"
    android:layout_marginBottom="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="فرح"
        android:textColor="@color/white"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/tx_desplay_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:textColor="@color/white"
        android:textSize="30sp"/>

</LinearLayout>
    </RelativeLayout>
</RelativeLayout>


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/title_top"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="الأكثر مشاهدة"

                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <View
                        android:id="@+id/div_title"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/title_top"
                        android:background="@drawable/div_seen_cardview"
                        android:layout_marginBottom="10dp"
                        ></View>

                    <RelativeLayout
                        android:id="@+id/content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/div_title">

                        <com.trncic.library.DottedProgressBar
                            android:id="@+id/progress"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:padding="40dp"
                            app:activeDot="@drawable/active_dot"
                            app:dotSize="29dp"
                            app:inactiveDot="@drawable/inactive_dot"
                            app:jumpingSpeed="1000"
                            app:spacing="15dp"
                            android:visibility="visible"/>


                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/seen_recycler_view"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scrollbars="none"
                            />


                    </RelativeLayout>

                    <View
                        android:id="@+id/div2_title"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/content"
                        android:background="@drawable/div_seen_cardview"

                        ></View>

                    <LinearLayout
                        android:id="@+id/layout_find_venue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_below="@id/div2_title"
                        android:gravity="center_vertical">
                        <TextView
                            android:id="@+id/tx_find_venue"
                            android:layout_margin="16dp"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="تصفح القاعات"

                            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
                    </LinearLayout>
                </RelativeLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="البحث عن موقع للحفل"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/second_cardviewText" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="قائمة الطعام"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/third_cardviewText" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="بطاقات الدعوة"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fourth_cardviewText" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:theme="@style/NavigationDrawerStyle"
        app:menu="@menu/drawer"/>

</android.support.v4.widget.DrawerLayout>